--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
     <img id="npc2" src="img/osbaldo(npc2).png" style="position: absolute; bottom: 10px; left: 50%; transform: translateX(-50%); width: 400px; height: auto;">
   </div>
 
+  <div id="cenario3" style="display: none; width: 100vw; height: 100vh; background: url('img/cenario3.png') no-repeat center/cover; position: relative;">
+    <img id="npc3" src="img/ronnie(npc%203).png" />
+  </div>
+
+
+
   <script src="./script.js"></script>
 </body>
 </html>
